--- a/src/main/resources/api.properties
+++ b/src/main/resources/api.properties
@@ -1,4 +1,4 @@
 port=3000
-jwks_endpoint="https://login-garcher.eu.ngrok.io/oauth/v2/oauth-anonymous/jwks"
-issuer_claim="https://login-garcher.eu.ngrok.io/oauth/v2/oauth-anonymous"
-audience_claim="api.example.com"
+jwks_endpoint=https://login-garcher.eu.ngrok.io/oauth/v2/oauth-anonymous/jwks
+issuer_claim=https://login-garcher.eu.ngrok.io/oauth/v2/oauth-anonymous
+audience_claim=guide-client
