--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -1,3 +1,3 @@
 org.slf4j.simpleLogger.defaultLogLevel=info
-org.slf4j.simpleLogger.log.io.curity.example.secureapi=debug
-org.slf4j.simpleLogger.log.org.jose4j=debug
+org.slf4j.simpleLogger.log.io.curity.example.secureapi=info
+org.slf4j.simpleLogger.log.org.jose4j=info
