Small fix to enable running from the command line

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </repositories>
 
     <build>
-        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
 
             <!-- Support builds to a JAR file via 'mvn package' -->
